--- a/open-ui/src/app/app/ui/content/calculator/calculator.component.css
+++ b/open-ui/src/app/app/ui/content/calculator/calculator.component.css
@@ -19,8 +19,9 @@
     box-sizing: border-box;
 }
 .calculator-card{
-    width: 300px;
-    height: 450px;
+    width: 350px;
+    height: auto;
+    padding-bottom: 30px;
 }
 .card .card-header{
     width: 100%;
@@ -39,12 +40,12 @@
     background: #fff;
     display:flex;
     flex-flow: column;
-    padding:20px;
+    padding: 20px 35px;
 }
 .card-body > .form-group{
     display:flex;
     flex-flow: column;
-    padding:10px 0;
+    padding:8px 0;
 }
 .card-body > .form-group > .form-label{
     /* font-family: 'Open Sans'; */
@@ -91,4 +92,65 @@
     font-size: 12px;
     margin-top: 20px;
     font-weight:600;
+}
+.slider-wrapper{
+    padding:5px 0;
+}
+.slider-value , ::ng-deep .p-inputtext{
+    margin: 0;
+    padding-bottom: 10px;
+    font-family: 'Montserrat';
+    font-size: 16px;
+    font-weight: 600;
+}
+::ng-deep .p-dropdown{
+    border: 0;
+    border-radius: 0;
+    border-bottom: 2px solid #ccc;
+    width: 100%;
+}
+::ng-deep .p-dropdown-open, ::ng-deep .p-focus{
+    box-shadow: none !important;
+}
+::ng-deep .p-dropdown-label{
+    padding: 5px;
+    padding-top: 0;
+}
+.row-layout{
+    display:flex;
+    flex-direction: row !important;
+    justify-content: space-between;
+}
+::ng-deep .p-inputswitch.p-inputswitch-checked .p-inputswitch-slider {
+    background:purple;
+}
+::ng-deep .p-inputswitch.p-inputswitch-checked .p-inputswitch-slider:before {
+    background: #ffffff;
+    border: 2px solid purple;
+}
+::ng-deep .p-inputswitch{
+    width: 1.5rem;
+    height: 1rem;
+}
+::ng-deep .p-inputswitch .p-inputswitch-slider:before{
+    width: 1rem;
+    height: 1rem;
+    left: -0.7rem;
+    top:60%;
+    border: 2px solid #ccc;
+}
+.emi-input{
+    border:none;
+    border-bottom: 2px solid #ccc;
+    border-radius: 0;
+    width:100%;
+}
+.emi-input:hover, .emi-input:focus{
+    border:none;
+    border-bottom: 2px solid #ccc;
+    box-shadow: none;
+}
+::ng-deep .p-slider-handle{
+    box-shadow: 0 0 3px 1px #ccc !important;
+    border: 5px solid #fff !important;
 }
