--- a/open-ui/src/app/app/ui/content/calculator/calculator.component.html
+++ b/open-ui/src/app/app/ui/content/calculator/calculator.component.html
@@ -8,14 +8,34 @@
             <div class="card-body">
                 <div class="form-group">
                     <label class="form-label">Monthly Income</label>
-
-                    <!-- <input type="range" min="1" max="100" value="50" class="slider" id="myRange"> -->
+                    <div class="slider-wrapper">
+                        <p class="slider-value">{{monIncome | currency: 'INR':true}}</p>
+                        <p-slider [(ngModel)]="monIncome" [min]="100000" [step]="10000" [max]="300000"></p-slider>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label class="form-label">Monthly Income</label>
-                    <!-- <input type="range" min="1" max="100" value="50" class="slider" id="myRange"> -->
+                    <label class="form-label">Monthly Expanse</label>
+                    <div class="slider-wrapper">
+                        <p class="slider-value">{{monExpense  | currency: 'INR':true}}</p>
+                        <p-slider [(ngModel)]="monExpense" [min]="10000" [step]="1000" [max]="100000"></p-slider>
+                    </div>
                 </div>
-
+                <div class="form-group">
+                    <label class="form-label">Monthly Expanse</label>
+                    <div class="slider-wrapper">
+                        <p-dropdown [options]="tenure" [(ngModel)]="selectedTenure" optionLabel="label"></p-dropdown>
+                    </div>
+                </div>
+                <div class="form-group row-layout">
+                    <label class="form-label">Do you have any existing loans?</label>
+                    <p-inputSwitch [(ngModel)]="checked"></p-inputSwitch>
+                </div>
+                <div class="form-group" *ngIf="checked">
+                    <label class="form-label">EMI of existing loan(optional)</label>
+                    <div class="slider-wrapper">
+                        <input type="text" pInputText [(ngModel)]="emi" class="emi-input"/>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card calculated-card">
