--- a/open-ui/src/app/app/ui/header/header.component.css
+++ b/open-ui/src/app/app/ui/header/header.component.css
@@ -41,6 +41,7 @@ body{
     font-family: 'Open Sans', sans-serif; 
     font-size:15px;
     height:40px;
+    margin:0 5px;
 }
 .get-started{
     width: 166px;
