--- a/open-ui/src/app/app/ui/header/header.component.html
+++ b/open-ui/src/app/app/ui/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="nav-container">
-    <nav class="navbar">
+    <nav class="navbar" #nav>
         <div class="logo-wrapper">
             <a class="navbar-brand">
                 <img src="/assets/images/logo.png" class="logo" alt="open-logo" title="Open Financial">
