--- a/open-ui/src/app/app/ui/content/content.component.css
+++ b/open-ui/src/app/app/ui/content/content.component.css
@@ -40,12 +40,13 @@
     margin-left: 0;
     padding: 150px 0 40px 155px;
 }
-.showcase-text > p{
+.heading{
     font-size: 32px;
     font-family: 'Montserrat', sans-serif;
     text-align: left;
     font-weight: 600;
     margin: 2px 0;
+    color:#222222;
 }
 .showcase-text > hr{
     height: 4px;
@@ -82,8 +83,63 @@
 }
 .featured-cards{
     background: transparent url(/assets/images/sol_wave_bg.svg) 0% 0% no-repeat padding-box; 
-    height:500px;
+    height:850px;
     display:flex;
     margin-top:100px;
     background-size: cover;
+}
+.card-items{
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 50px 100px;
+    width:60%;
+    padding-top:0;
+}
+.card-item{
+    width:45%;
+    margin:15px 0;
+}
+.card-item:nth-child(4){
+    margin-top:100px;
+}
+.cta-panel{
+    width:40%;
+    padding-top:200px;
+}
+.cta-body{
+    display: flex;
+    flex-direction: column;
+}
+.cta-body > div > hr{
+    width:15%;
+    margin-top:25px;
+    height: 4px;
+    background: #000000;
+    float: left;
+}
+.desc{
+    font-family: Montserrat;
+    font-weight:400;
+    font-size:18px;
+    color:#999999;
+    width:60%;
+}
+.cta-btn-wrapper{
+    padding-top:50px;
+}
+.cta-btn{
+    border: 2px solid #663399;
+    border-radius:24px;
+    padding:8px 16px;
+    color:#663399;
+    cursor:pointer;
+    font-family: Montserrat;
+    font-weight:400;
+    background:transparent;
+}
+.cta-btn:hover{
+    color:#fff;
+    cursor:pointer;
+    background:#6B389D;
 }
