--- a/open-ui/src/app/app/ui/content/content.component.html
+++ b/open-ui/src/app/app/ui/content/content.component.html
@@ -2,8 +2,8 @@
     <div class="showcase">
         <div class="left-column">
             <div class="showcase-text">
-                <p>We make it Super</p>
-                <p>Simple</p>
+                <p class="heading">We make it Super</p>
+                <p class="heading">Simple</p>
                 <hr>
             </div>
             <div class="showcase-img-container">
@@ -19,11 +19,22 @@
     <div class="container featured-cards">
         <div class="card-items">
             <ng-container *ngFor="let card of listOfCards">
-                <app-card [cardDetails]="card"></app-card>
+                <div class="card-item">
+                    <app-card [cardDetails]="card"></app-card>
+                </div>
             </ng-container>
         </div>
         <div class="cta-panel">
-
+            <div class="cta-body">
+                <p class="heading">Boost you business</p>
+                <p class="heading">with Open</p>
+                <div><hr></div>
+                <br/>
+                <div class="desc">Get your hands on a term loan that’s crafted for your business</div>
+            </div>
+            <div class="cta-btn-wrapper">
+                <button class="cta-btn" type="button">Get an Open Account</button>
+            </div>
         </div>
     </div>
 </section>
