--- a/open-ui/src/app/app/ui/header/header.component.css
+++ b/open-ui/src/app/app/ui/header/header.component.css
@@ -7,6 +7,14 @@ body{
     position: sticky;
     top:0;
 }
+.sticky-header{
+    background:#fff;
+    height:75px !important;
+    box-shadow: 0px 0px 20px #00000033;
+}
+.sticky-header > .logo-wrapper > .navbar-brand > img{
+    height:75px !important;
+}
 .navbar{
     display:flex;
     height:100px;
@@ -32,9 +40,12 @@ body{
     margin: 0 15px;
 
 }
+.nav-link:hover{
+    color:#6B389D;
+    cursor:pointer;
+}
 .nav-btn{
     width: 118px;
-    box-shadow: 0px 0px 20px #00000033;
     border: 2px solid #663399;
     border-radius: 24px;
     opacity: 1;
@@ -43,10 +54,14 @@ body{
     height:40px;
     margin:0 5px;
 }
+.nav-btn:hover{
+    color:#fff;
+    cursor:pointer;
+    background:#6B389D;
+}
 .get-started{
     width: 166px;
     background: transparent linear-gradient(90deg, #9F62C9 0%, #663399 100%) 0% 0% no-repeat padding-box;
-    box-shadow: 0px 0px 20px #00000033;
     border-radius: 24px;
     opacity: 1;
     font-family: 'Open Sans', sans-serif; 
