--- a/open-ui/src/app/app/ui/ui.component.html
+++ b/open-ui/src/app/app/ui/ui.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" #containerRef>
     <app-header></app-header>
     <app-content></app-content>
 </div>
