--- a/src/app/app/ui/header/header.component.html
+++ b/src/app/app/ui/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="nav-container">
     <nav class="navbar" #nav>
         <div class="logo-wrapper">
-            <a class="navbar-brand">
+            <a class="navbar-brand" href="https://open.money" target="_blank">
                 <img src="/assets/images/logo.png" class="logo" alt="open-logo" title="Open Financial">
             </a>
         </div>
