--- a/src/app/app/ui/content/calculator/calculator.component.html
+++ b/src/app/app/ui/content/calculator/calculator.component.html
@@ -32,8 +32,8 @@
                 </div>
                 <div class="form-group" *ngIf="checked">
                     <label class="form-label">EMI of existing loan(optional)</label>
-                    <div class="slider-wrapper">
-                        <input type="text" pInputText [(ngModel)]="emi" class="emi-input"/>
+                    <div class="slider-wrapper input-wrapper">
+                        <span class="slider-value rupee-symbol">&#8377;</span><input type="text" pInputText [(ngModel)]="emi" class="emi-input"/>
                     </div>
                 </div>
             </div>
